--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>Путешествия по России</title>
     <link rel="stylesheet" href="./index.css">
 </head>
-<body>
-    <div class="page">
-        <header class="header">
+<body class="page">
+       <header class="header">
             <img src="./images/__logo.svg" alt="Лого" class="header__logo">
             <ul class="header__lang-links">
-                <li><a href="#" class="header__lang-link">Ru</a></li>
+                <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
                 <li><a href="#" class="header__lang-link">En</a></li>
             </ul>
         </header>
@@ -22,7 +21,7 @@
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img src="./images/__image.jpg" alt="Вагон поезда" class="lead__image">
                 <p class="lead__caption">ваша полка - верхняя</p>
-             </section>
+             </section> 
              <section class="intro">
                  <h3 class="intro__title">Чего мы там не видели?</h3>
                  <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, 
@@ -35,15 +34,112 @@
                      усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. 
                      Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                  <ul class="intro__list">
-                     <li>Часовых поясов 11</li>
-                     <li>Объектов природного наследия ЮНЕСКО 12</li>
-                     <li>Объектов культурного наследия ЮНЕСКО 16</li>
-                     <li>Природных заповедников 105</li>
-                     <li>Аэропортов 241</li>
+                     <li>Часовых поясов<span class="intro__number">11</span></li>
+                     <li>Объектов природного наследия ЮНЕСКО<span class="intro__number">12</span></li>
+                     <li>Объектов культурного наследия ЮНЕСКО<span class="intro__number">16</span></li>
+                     <li>Природных заповедников<span class="intro__number">105</span></li>
+                     <li>Аэропортов<span class="intro__number">241</span></li>
                  </ul>
              </section>
+             <section class="photo-grid">
+                 <img src="./images/__item.jpg" alt="Вид из окна поезда" class="photo-grid__item">
+                 <img src="./images/__item (1).jpg" alt="Горы" class="photo-grid__item">
+                 <img src="./images/__item (2).jpg" alt="Волк" class="photo-grid__item">
+                 <img src="./images/__item (3).jpg" alt="Туманный лес" class="photo-grid__item">
+                 <img src="./images/__item (4).jpg" alt="Лед под колесами" class="photo-grid__item">
+                 <img src="./images/__item (5).jpg" alt="Пляж" class="photo-grid__item">
+                 <img src="./images/__item (6).jpg" alt="Гора" class="photo-grid__item">
+                 <img src="./images/__item (7).jpg" alt="Дорожный знак" class="photo-grid__item">
+                 <img src="./images/__item (8).jpg" alt="Сопки" class="photo-grid__item">
+                 <img src="./images/__item (9).jpg" alt="Гора и поле" class="photo-grid__item">
+                 <img src="./images/__item (10).jpg" alt="Скалы и пляж" class="photo-grid__item">
+                 <img src="./images/__item (11).jpg" alt="Туман на горе" class="photo-grid__item">
+             </section>
+             <section class="places">
+                 <ul class="places__list">
+                    <li class="place">
+                         <h4 class="place__title">Куршская<br> коса</h4>
+                         <div class="place__website"> 
+                            <p class="place__website-text">URL</p>
+                            <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
+                        </div>
+                         <img src="./images/kosa.jpg" alt="Берег" class="place__image">
+                         <div class="place__paragraphs">
+                            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+                            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                        </div>
+                    </li>
+                    <li class="place">
+                         <h4 class="place__title">Кольский</h4>
+                         <div class="place__website"> 
+                            <p class="place__website-text">URL</p>
+                            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website-link">National Geographic</a>
+                        </div>
+                         <img src="./images/kolskiy.jpg" alt="Сопки" class="place__image">
+                         <div class="place__paragraphs">
+                            <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
+                            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                            <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+                            в Мурманск.</p>
+                        </div>
+                    <li class="place">
+                         <h4 class="place__title">Алтай</h4>
+                         <div class="place__website"> 
+                            <p class="place__website-text">URL</p>
+                            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website-link">Facebook</a>
+                        </div>
+                         <img src="./images/altai.jpg" alt="Вид на лес" class="place__image">
+                         <div class="place__paragraphs">
+                            <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
+                            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+                            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+                        </div>
+                    </li>
+                    <li class="place">
+                         <h4 class="place__title">Зимний байкал</h4>
+                         <div class="place__website"> 
+                            <p class="place__website-text">URL</p>
+                            <a href="https://vk.com/baikalmile" class="place__website-link">https://vk.com/baikalmile</a>
+                        </div>
+                         <img src="./images/baykal.jpg" alt="Лед Байкала" class="place__image">
+                         <div class="place__paragraphs">
+                            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
+                            в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+                             <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
+                            к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+                        </div>
+                    </li>
+                     <li class="place">
+                         <h4 class="place__title">Карелия</h4>
+                         <div class="place__website"> 
+                            <p class="place__website-text">URL</p>
+                            <a href="http://vodlozero.ru" class="place__website-link">http://vodlozero.ru/</a>
+                        </div>
+                         <img src="./images/kareliya.jpg" alt="Озеро" class="place__image">
+                         <div class="place__paragraphs">
+                            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
+                            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
+                            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                        </div>
+                    </li>
+                 </ul>
+             </section>
+             <section class="cover">
+                    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+                        <h3 class="cover__title">До Байкала<br> «на собаках»</h3>
+                        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                    </a>
+             </section>
         </main>
-    </div>
-    
+        <footer class="footer">
+            <nav class="footer__menu">
+                <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+                <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+                <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+                <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+                <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+            </nav>
+            <h5 class="footer__copyright">2022. Чёрная Ксения</h5>
+        </footer>
 </body>
 </html>
