--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body class="page">
        <header class="header">
             <img src="./images/__logo.svg" alt="Лого" class="header__logo">
-            <ul class="header__lang-links">
-                <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
-                <li><a href="#" class="header__lang-link">En</a></li>
-            </ul>
+            <div class="header__lang-links">
+                <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+                <a href="#" class="header__lang-link">En</a>
+            <div>
         </header>
         <main class="content">
             <section class="lead">
@@ -60,7 +60,7 @@
                     <li class="place">
                          <h4 class="place__title">Куршская<br> коса</h4>
                          <div class="place__website"> 
-                            <p class="place__website-text">URL</p>
+                            <p class="place__url-heading">URL</p>
                             <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
                         </div>
                          <img src="./images/kosa.jpg" alt="Берег" class="place__image">
@@ -72,7 +72,7 @@
                     <li class="place">
                          <h4 class="place__title">Кольский</h4>
                          <div class="place__website"> 
-                            <p class="place__website-text">URL</p>
+                            <p class="place__url-heading">URL</p>
                             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website-link">National Geographic</a>
                         </div>
                          <img src="./images/kolskiy.jpg" alt="Сопки" class="place__image">
@@ -85,7 +85,7 @@
                     <li class="place">
                          <h4 class="place__title">Алтай</h4>
                          <div class="place__website"> 
-                            <p class="place__website-text">URL</p>
+                            <p class="place__url-heading">URL</p>
                             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website-link">Facebook</a>
                         </div>
                          <img src="./images/altai.jpg" alt="Вид на лес" class="place__image">
@@ -98,7 +98,7 @@
                     <li class="place">
                          <h4 class="place__title">Зимний байкал</h4>
                          <div class="place__website"> 
-                            <p class="place__website-text">URL</p>
+                            <p class="place__url-heading">URL</p>
                             <a href="https://vk.com/baikalmile" class="place__website-link">https://vk.com/baikalmile</a>
                         </div>
                          <img src="./images/baykal.jpg" alt="Лед Байкала" class="place__image">
@@ -112,7 +112,7 @@
                      <li class="place">
                          <h4 class="place__title">Карелия</h4>
                          <div class="place__website"> 
-                            <p class="place__website-text">URL</p>
+                            <p class="place__url-heading">URL</p>
                             <a href="http://vodlozero.ru" class="place__website-link">http://vodlozero.ru/</a>
                         </div>
                          <img src="./images/kareliya.jpg" alt="Озеро" class="place__image">
@@ -126,7 +126,7 @@
              </section>
              <section class="cover">
                     <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
-                        <h3 class="cover__title">До Байкала<br> «на собаках»</h3>
+                        <h3 class="cover__title">До Байкала «на&nbsp;собаках»</h3>
                         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
                     </a>
              </section>
