--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
        <header class="header">
@@ -58,7 +58,7 @@
              <section class="places">
                  <ul class="places__list">
                     <li class="place">
-                         <h4 class="place__title">Куршская<br> коса</h4>
+                         <h4 class="place__title">Куршская коса</h4>
                          <div class="place__website"> 
                             <p class="place__url-heading">URL</p>
                             <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
@@ -96,7 +96,7 @@
                         </div>
                     </li>
                     <li class="place">
-                         <h4 class="place__title">Зимний байкал</h4>
+                         <h4 class="place__title">Зимний Байкал</h4>
                          <div class="place__website"> 
                             <p class="place__url-heading">URL</p>
                             <a href="https://vk.com/baikalmile" class="place__website-link">https://vk.com/baikalmile</a>
