--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                  <ul class="places__list">
                     <li class="place">
                          <h4 class="place__title">Куршская коса</h4>
+                        <!--Сказали, что название заголовка можно оставить на одну строку и не добиваться
+                        соотвествия с макетом, но из-за этого съежают дальнейшие блоки, если сравнивать по пиксель-перфекту -->
                          <div class="place__website"> 
                             <p class="place__url-heading">URL</p>
                             <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
