--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
         </header>
         <main class="content">
             <section class="lead">
-                <h1 class="lead__title">Путешествия по России</h1>
-                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <img src="./images/__image.jpg" alt="Вагон поезда" class="lead__image">
-                <p class="lead__caption">ваша полка - верхняя</p>
+                <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей&nbsp;,&nbsp;а здесь.</p>
+                <figure class="lead__figure">
+                    <img src="./images/__image.jpg" alt="Вагон поезда" class="lead__image">
+                    <figcaption class="lead__caption">ваша полка &mdash; верхняя</figcaption>
+                </figure>
              </section> 
              <section class="intro">
-                 <h3 class="intro__title">Чего мы там не видели?</h3>
+                 <h3 class="intro__title">Чего мы там не&nbsp;видели?</h3>
                  <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, 
                      но только 36% планируют провести отпуск в родной стране. 
                      Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, 
@@ -58,24 +60,22 @@
              <section class="places">
                  <ul class="places__list">
                     <li class="place">
-                         <h4 class="place__title">Куршская коса</h4>
-                        <!--Сказали, что название заголовка можно оставить на одну строку и не добиваться
-                        соотвествия с макетом, но из-за этого съежают дальнейшие блоки, если сравнивать по пиксель-перфекту -->
+                         <h4 class="place__title place__title_transfer">Куршская коса</h4>
                          <div class="place__website"> 
                             <p class="place__url-heading">URL</p>
-                            <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
+                            <a href="http://park-kosa.ru" class="place__website-link" target="_blank">park-kosa.ru</a>
                         </div>
                          <img src="./images/kosa.jpg" alt="Берег" class="place__image">
                          <div class="place__paragraphs">
                             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-                            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
                         </div>
                     </li>
                     <li class="place">
                          <h4 class="place__title">Кольский</h4>
                          <div class="place__website"> 
                             <p class="place__url-heading">URL</p>
-                            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website-link">National Geographic</a>
+                            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website-link" target="_blank">National Geographic</a>
                         </div>
                          <img src="./images/kolskiy.jpg" alt="Сопки" class="place__image">
                          <div class="place__paragraphs">
@@ -89,7 +89,7 @@
                          <h4 class="place__title">Алтай</h4>
                          <div class="place__website"> 
                             <p class="place__url-heading">URL</p>
-                            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website-link">Facebook</a>
+                            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website-link" target="_blank">Facebook</a>
                         </div>
                          <img src="./images/altai.jpg" alt="Вид на лес" class="place__image">
                          <div class="place__paragraphs">
@@ -102,7 +102,7 @@
                          <h4 class="place__title">Зимний Байкал</h4>
                          <div class="place__website"> 
                             <p class="place__url-heading">URL</p>
-                            <a href="https://vk.com/baikalmile" class="place__website-link">https://vk.com/baikalmile</a>
+                            <a href="https://vk.com/baikalmile" class="place__website-link" target="_blank">https://vk.com/baikalmile</a>
                         </div>
                          <img src="./images/baykal.jpg" alt="Лед Байкала" class="place__image">
                          <div class="place__paragraphs">
@@ -116,7 +116,7 @@
                          <h4 class="place__title">Карелия</h4>
                          <div class="place__website"> 
                             <p class="place__url-heading">URL</p>
-                            <a href="http://vodlozero.ru" class="place__website-link">http://vodlozero.ru/</a>
+                            <a href="http://vodlozero.ru" class="place__website-link" target="_blank">http://vodlozero.ru/</a>
                         </div>
                          <img src="./images/kareliya.jpg" alt="Озеро" class="place__image">
                          <div class="place__paragraphs">
@@ -128,21 +128,21 @@
                  </ul>
              </section>
              <section class="cover">
-                    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+                    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
                         <h3 class="cover__title">До Байкала «на&nbsp;собаках»</h3>
-                        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                        <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе — путешествие от столицы до Байкала на электричках.</p>
                     </a>
              </section>
         </main>
         <footer class="footer">
             <nav class="footer__menu">
-                <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-                <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-                <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-                <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-                <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+                <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
+                <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
+                <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
+                <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
+                <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
             </nav>
-            <h5 class="footer__copyright">2022. Чёрная Ксения</h5>
+            <p class="footer__copyright">2022. Чёрная Ксения</p>
         </footer>
 </body>
 </html>
